--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
     position: sticky;
     top: 0;
     z-index: 1000; /* Zorg ervoor dat de navbar boven andere elementen blijft */
+    background-color: black;
 }
 .dropdown-menu {
-    background-color: aquamarine; /* Jouw gewenste kleur */
+    background-color: gray; /* Jouw gewenste kleur */
 }
 .dropdown-menu :hover {
-    background-color: rgb(107, 214, 178); /* Jouw gewenste kleur */
+    background-color: rgb(84, 84, 84); /* Jouw gewenste kleur */
 }
 .container {
     margin-top: 100px;
@@ -19,10 +20,26 @@
 .Welkom{
     position: absolute;
     bottom: 500px;
+    left: 50px;
+    -webkit-text-stroke-width: 1.2px;
+    -webkit-text-stroke-color: black;
+  
 }
+
 .footer{
     border: none;
+    background-color: black;
 }
 .container2{
     margin-bottom: 100px;
+}
+.Foto{
+    width: 100vw;
+    height: auto;
+    background-color: rgb(168, 168, 168);
+}
+.MijnFoto{
+    height: 44vh;
+    width: auto;
+    margin-left: 27vw;
 }
