--- a/style.css
+++ b/style.css
@@ -63,3 +63,13 @@ body {
     width: 56vw;
     height: auto;
 }
+.Web1{
+    margin-left: -100px; /* Pas de gewenste negatieve marge aan */
+    width: 56vw;
+    height: auto;
+}
+.Web2{
+    margin-left: -100px; /* Pas de gewenste negatieve marge aan */
+    width: 56vw;
+    height: auto;
+}
